--- a/src/components/layout/UserMenu.module.css
+++ b/src/components/layout/UserMenu.module.css
@@ -156,4 +156,12 @@
   .displayName {
     display: none;
   }
+
+  .guestActions {
+    display: none;
+  }
+
+  .skeleton {
+    display: none;
+  }
 }
